--- a/Transportaciones_CICESE/app/src/main/res/menu/activity_inicio_choferes_drawer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/menu/activity_inicio_choferes_drawer.xml
@@ -17,6 +17,10 @@
             android:icon="@drawable/chat_icon"
             android:title="@string/notificaciones_rapidas" />
         <item
+            android:id="@+id/nav_chat"
+            android:icon="@drawable/chat_icon"
+            android:title="@string/chat" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout_icon"
             android:title="@string/cerrar_sesi_n" />
