--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
@@ -23,6 +23,50 @@
 
     <include layout="@layout/content_inicio_asistentes" />
 
+    <RelativeLayout
+        android:layout_width="407dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView15"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="487dp"
+        android:layout_marginTop="500dp">
+
+        <Button
+            android:id="@+id/irARegistros"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:text="Registrar usuarios y solicitudes">
+
+        </Button>
+
+
+        <Button
+            android:id="@+id/irAUpdate"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_alignTop="@+id/irARegistros"
+            android:layout_centerHorizontal="true"
+            android:text="Actualizar servicios">
+
+        </Button>
+
+
+        <Button
+            android:id="@+id/irAConsultas"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_alignTop="@+id/irAUpdate"
+            android:layout_marginStart="11dp"
+            android:layout_toEndOf="@+id/irAUpdate"
+            android:text="Consultar servicios">
+
+        </Button>
+    </RelativeLayout>
 
     <!--android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
