--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_choferes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_choferes.xml
@@ -23,13 +23,43 @@
 
     <include layout="@layout/content_inicio_choferes" />
 
-    <android.support.design.widget.FloatingActionButton
+
+    <RelativeLayout
+        android:layout_width="407dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView15"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="487dp"
+        android:layout_marginTop="540dp">
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="100dp"
+            android:layout_height="90dp"
+            android:layout_alignTop="@+id/button4"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@+id/button4"
+            android:text="Ver mis servicios" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="100dp"
+            android:layout_height="90dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="87dp"
+            android:text="Enviar notificaciones rápidas" />
+
+    </RelativeLayout>
+    <!--android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/chat_icon" />
+        app:srcCompat="@drawable/chat_icon" /-->
 
 </android.support.design.widget.CoordinatorLayout>
