--- a/Transportaciones_CICESE/app/src/main/res/menu/activity_inicio_pasajero_drawer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/menu/activity_inicio_pasajero_drawer.xml
@@ -15,6 +15,10 @@
             android:icon="@drawable/events_icon"
             android:title="@string/eventos" />
         <item
+            android:id="@+id/nav_chat"
+            android:icon="@drawable/chat_icon"
+            android:title="@string/chat" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout_icon"
             android:title="@string/cerrar_sesi_n" />
