--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
@@ -17,7 +17,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@android:color/black" />
+            app:titleTextColor="@android:color/black"
+            />
 
     </android.support.design.widget.AppBarLayout>
 
