--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_menu_registros_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_menu_registros_asistente.xml
@@ -4,128 +4,148 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="@android:color/background_light"
     tools:context="com.transporte.cicese.transportaciones_cicese.MenuRegistrosAsistenteActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/imr1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:backgroundTint="@android:color/background_light"
-        android:contentDescription=""
-        app:srcCompat="@drawable/chofer"
-        tools:ignore="ContentDescription,UnusedAttribute"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="80dp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:id="@+id/llmr">
 
-    <ImageButton
-        android:id="@+id/imr2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/pasajero"
-        android:contentDescription=""
-        tools:ignore="ContentDescription,UnusedAttribute"
-        android:layout_above="@+id/textView18"
-        android:layout_toEndOf="@+id/textView18"
-        android:layout_marginStart="12dp" />
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="600dp"
+                    android:layout_height="35dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/textbacks"
+                    tools:ignore="ContentDescription" />
 
-    <ImageButton
-        android:id="@+id/imr3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/asistente"
-        tools:ignore="ContentDescription,UnusedAttribute"
-        android:layout_alignTop="@+id/imr2"
-        android:layout_toEndOf="@+id/imr2" />
+                <TextView
+                    android:id="@+id/textViewRC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/imageView10"
+                    android:layout_centerHorizontal="true"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="Seleccione una de las siguientes opciones para registrar usuarios o una solicitud"
+                    android:textAlignment="center"
+                    android:textColor="?attr/actionMenuTextColor"
+                    android:textSize="15sp"
+                    tools:ignore="MissingConstraints,RtlHardcoded"
+                    tools:layout_editor_absoluteX="134dp"
+                    tools:layout_editor_absoluteY="16dp" />
 
-    <ImageButton
-        android:id="@+id/imr4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/solicitud"
-        tools:ignore="ContentDescription,UnusedAttribute"
-        android:layout_alignTop="@+id/imr3"
-        android:layout_toEndOf="@+id/imr3" />
+            </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrar chofer"
-        android:layout_marginStart="11dp"
-        tools:ignore="HardcodedText"
-        android:layout_below="@+id/imr1"
-        android:textColor="@color/ColorActionBarTitle"
-        android:layout_alignStart="@+id/imr1" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignStart="@+id/llmr"
+                android:layout_below="@+id/llmr">
 
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrar pasajero"
-        android:textColor="@color/ColorActionBarTitle"
-        tools:ignore="HardcodedText"
-        android:layout_below="@+id/imr2"
-        android:layout_toEndOf="@+id/imr1" />
+                <ImageButton
+                    android:id="@+id/imr1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toStartOf="@+id/textView26"
+                    android:backgroundTint="@android:color/background_light"
+                    android:contentDescription="TODO"
+                    app:srcCompat="@drawable/chofer" />
 
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrar asistente"
-        tools:ignore="HardcodedText"
-        android:textColor="@color/ColorActionBarTitle"
-        android:layout_alignBaseline="@+id/textView19"
-        android:layout_alignBottom="@+id/textView19"
-        android:layout_toStartOf="@+id/imr4" />
+                <TextView
+                    android:id="@+id/textView18"
+                    android:layout_width="109dp"
+                    android:layout_height="17dp"
+                    android:layout_alignStart="@+id/imr1"
+                    android:layout_below="@+id/imr1"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/registrar_chofer"
+                    android:textColor="@color/ColorActionBarTitle" />
 
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrar solicitud"
-        tools:ignore="HardcodedText"
-        android:textColor="@color/ColorActionBarTitle"
-        android:layout_alignBaseline="@+id/textView20"
-        android:layout_alignBottom="@+id/textView20"
-        android:layout_alignEnd="@+id/imr4" />
+                <ImageButton
+                    android:id="@+id/imr2"
+                    android:layout_width="122dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_toEndOf="@+id/textView18"
+                    android:backgroundTint="@android:color/background_light"
+                    android:contentDescription="TODO"
+                    app:srcCompat="@drawable/pasajero" />
 
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/textbacks"
-        android:layout_marginTop="12dp"
-        tools:ignore="ContentDescription"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/imr2"
+                    android:layout_below="@+id/imr2"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/registrar_pasajero"
+                    android:textColor="@color/ColorActionBarTitle"/>
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Seleccione una opción"
-        android:textColor="@color/ColorActionBarTitle"
-        android:textSize="20sp"
-        tools:ignore="HardcodedText"
-        android:layout_alignTop="@+id/imageView10"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp" />
+                <ImageButton
+                    android:id="@+id/imr3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="20dp"
+                    android:layout_toStartOf="@+id/imr4"
+                    android:backgroundTint="@android:color/background_light"
+                    app:srcCompat="@drawable/asistente" />
 
-    <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        tools:ignore="HardcodedText"
-        android:text="Al hacer un registro, por favor asegurese de que todos los datos sean correctos"
-        android:layout_below="@+id/textView18"
-        android:layout_alignEnd="@+id/textView21"
-        android:layout_marginTop="20dp" />
+                <TextView
+                    android:id="@+id/textView20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/imr3"
+                    android:layout_below="@+id/imr3"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/registrar_asistente"
+                    android:textColor="@color/ColorActionBarTitle" />
 
+                <ImageButton
+                    android:id="@+id/imr4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toEndOf="@+id/textView26"
+                    android:backgroundTint="@android:color/background_light"
+                    app:srcCompat="@drawable/solicitud" />
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView20"
+                    android:layout_alignBottom="@+id/textView20"
+                    android:layout_alignEnd="@+id/imr4"
+                    android:text="@string/registrar_solicitud"
+                    android:textColor="@color/ColorActionBarTitle" />
+
+                <TextView
+                    android:id="@+id/textView26"
+                    android:layout_width="304dp"
+                    android:layout_height="43dp"
+                    android:layout_below="@+id/textView20"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="47dp"
+                    android:text="@string/tip"
+                    android:textAlignment="center" />
+
+
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
