--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_chofer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_chofer.xml
@@ -7,150 +7,208 @@
     android:background="#ffff"
     tools:context="com.transporte.cicese.transportaciones_cicese.RegistroChoferActivity">
 
-    <TextView
-        android:id="@+id/textViewRC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/capture_los_siguientes_datos"
-        android:textColor="@android:color/background_dark"
-        android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="27dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="800dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="400dp">
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="630dp"
+                android:layout_height="35dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="22dp"
+                app:srcCompat="@drawable/textbacks"
+                tools:ignore="ContentDescription" />
 
 
-    <EditText
-        android:id="@+id/numeroEmpleado"
-        android:layout_width="250dp"
-        android:layout_marginTop="18dp"
-        android:layout_height="40dp"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/emp_icon"
-        android:drawablePadding="5dp"
-        android:ems="10"
-        android:hint="@string/n_mero_de_empleado"
-        android:inputType="number"
-        android:layout_below="@+id/textViewRC"
-        android:layout_alignStart="@+id/textViewRC" />
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="50dp"
+                android:layout_height="35dp"
+                android:layout_alignStart="@+id/imageView10"
+                android:layout_alignTop="@+id/imageView10"
+                android:layout_marginStart="8dp"
+                app:srcCompat="@drawable/chofer"
+                tools:ignore="ContentDescription" />
 
-    <EditText
-        android:id="@+id/contrasenaChofer"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_alignEnd="@+id/numeroEmpleado"
-        android:layout_alignStart="@+id/numeroEmpleado"
-        android:layout_below="@+id/numeroEmpleado"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/password_icon"
-        android:drawablePadding="5dp"
-        android:ems="10"
-        android:fontFamily="sans-serif"
-        android:hint="@string/contrase_aChofer"
-        android:inputType="textWebPassword" />
+            <TextView
+                android:id="@+id/textViewRC"
+                android:text="@string/desc_p_chofer"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_alignTop="@+id/imageView10"
+                android:layout_toEndOf="@+id/imageView4"
+                android:paddingTop="5dp"
+                android:textAlignment="inherit"
+                android:textColor="?attr/actionMenuTextColor"
+                android:textSize="15sp"
+                tools:ignore="MissingConstraints,RtlHardcoded"
+                tools:layout_editor_absoluteX="134dp"
+                tools:layout_editor_absoluteY="16dp" />
 
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView10"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="18dp"
+                android:text="@string/capture_los_siguientes_datos" />
 
-    <EditText
-        android:id="@+id/nombreChofer"
-        android:layout_width="300dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/name_icon"
-        android:drawablePadding="5dp"
-        android:hint="@string/nombre"
-        android:inputType="text"
-        android:layout_below="@+id/contrasenaChofer"
-        android:layout_alignStart="@+id/contrasenaChofer"
-        android:layout_alignEnd="@+id/contrasenaChofer" />
+            <EditText
+                android:id="@+id/numeroEmpleado"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:layout_alignStart="@+id/imageView4"
+                android:layout_below="@+id/textView6"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/emp_icon"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:hint="@string/n_mero_de_empleado"
+                android:inputType="number"
+                tools:ignore="RtlHardcoded" />
 
-
-    <EditText
-        android:id="@+id/aPaternoChofer"
-        android:layout_width="300dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/name_icon"
-        android:drawablePadding="5dp"
-        android:hint="@string/apellido_paterno"
-        android:inputType="text"
-        android:layout_below="@+id/nombreChofer"
-        android:layout_alignStart="@+id/nombreChofer"
-        android:layout_alignEnd="@+id/nombreChofer" />
-
-    <EditText
-        android:id="@+id/aMaternoChofer"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/name_icon"
-        android:drawablePadding="5dp"
-        android:hint="@string/apellido_materno"
-        android:inputType="text"
-        android:layout_alignTop="@+id/numeroEmpleado"
-        android:layout_toEndOf="@+id/numeroEmpleado"
-        android:layout_marginStart="17dp" />
-
-    <EditText
-        android:id="@+id/telefonoChofer"
-        android:layout_width="300dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="40dp"
-        android:hint="@string/tel_fono"
-        android:ems="10"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/cell_icon"
-        android:drawablePadding="5dp"
-        android:inputType="phone"
-        android:layout_below="@+id/aMaternoChofer"
-        android:layout_alignStart="@+id/aMaternoChofer"
-        android:layout_alignEnd="@+id/aMaternoChofer" />
-
-    <EditText
-        android:id="@+id/emailChofer"
-        android:layout_width="255dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="40dp"
-        android:hint="Correo electrónico"
-        android:ems="10"
-        android:background="@drawable/border_style"
-        android:drawableLeft="@drawable/email_icon"
-        android:drawablePadding="5dp"
-        android:inputType="textEmailAddress"
-        android:layout_below="@+id/telefonoChofer"
-        android:layout_alignStart="@+id/telefonoChofer"
-        android:layout_alignEnd="@+id/telefonoChofer" />
-
-    <Button
-        android:id="@+id/registroChofer_btn"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:background="@drawable/secondary_button_style"
-        android:text="@string/aceptar"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:layout_alignTop="@+id/aPaternoChofer"
-        android:layout_alignStart="@+id/emailChofer" />
-
-    <Button
-        android:id="@+id/popup"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/exclamation"
-        tools:ignore="HardcodedText,UnusedAttribute"
-        android:layout_alignTop="@+id/telefonoChofer"
-        android:layout_alignEnd="@+id/telefonoChofer" />
+            <EditText
+                android:id="@+id/contrasenaChofer"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_alignEnd="@+id/numeroEmpleado"
+                android:layout_alignStart="@+id/numeroEmpleado"
+                android:layout_below="@+id/numeroEmpleado"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/password_icon"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="sans-serif"
+                android:hint="@string/contrase_aChofer"
+                android:inputType="textWebPassword"
+                tools:ignore="RtlHardcoded" />
 
 
+            <EditText
+                android:id="@+id/nombreChofer"
+                android:layout_width="300dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="40dp"
+                android:ems="10"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/name_icon"
+                android:drawablePadding="5dp"
+                android:hint="@string/nombre"
+                android:inputType="text"
+                android:layout_below="@+id/contrasenaChofer"
+                android:layout_alignStart="@+id/contrasenaChofer"
+                android:layout_alignEnd="@+id/contrasenaChofer"
+                tools:ignore="RtlHardcoded" />
 
+
+            <EditText
+                android:id="@+id/aPaternoChofer"
+                android:layout_width="300dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="40dp"
+                android:ems="10"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/name_icon"
+                android:drawablePadding="5dp"
+                android:hint="@string/apellido_paterno"
+                android:inputType="text"
+                android:layout_below="@+id/nombreChofer"
+                android:layout_alignStart="@+id/nombreChofer"
+                android:layout_alignEnd="@+id/nombreChofer"
+                tools:ignore="RtlHardcoded" />
+
+            <EditText
+                android:id="@+id/aMaternoChofer"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:layout_alignBaseline="@+id/numeroEmpleado"
+                android:layout_alignBottom="@+id/numeroEmpleado"
+                android:layout_marginStart="30dp"
+                android:layout_toEndOf="@+id/numeroEmpleado"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/name_icon"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:hint="@string/apellido_materno"
+                android:inputType="text"
+                tools:ignore="RtlHardcoded" />
+
+            <!--INFORMACION DE FORMATO-->
+            <EditText
+                android:id="@+id/telefonoChofer"
+                android:layout_width="255dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="40dp"
+                android:hint="@string/tel_fono"
+                android:ems="10"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/cell_icon"
+                android:drawablePadding="5dp"
+                android:inputType="number"
+                android:maxLength="10"
+                android:layout_below="@+id/aMaternoChofer"
+                android:layout_alignStart="@+id/aMaternoChofer"
+                android:layout_alignEnd="@+id/aMaternoChofer"
+                tools:ignore="RtlHardcoded" />
+
+            <EditText
+                android:id="@+id/emailChofer"
+                android:layout_width="255dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="40dp"
+                android:hint="@string/email"
+                android:ems="10"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/email_icon"
+                android:drawablePadding="5dp"
+                android:inputType="textEmailAddress"
+                android:layout_below="@+id/telefonoChofer"
+                android:layout_alignStart="@+id/telefonoChofer"
+                android:layout_alignEnd="@+id/telefonoChofer" />
+
+
+            <Button
+                android:id="@+id/registroChofer_btn"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:layout_alignBaseline="@+id/aPaternoChofer"
+                android:layout_alignBottom="@+id/aPaternoChofer"
+                android:layout_alignStart="@+id/emailChofer"
+                android:background="@drawable/secondary_button_style"
+                android:text="@string/aceptar"
+                android:textAllCaps="false"
+                android:textColor="@android:color/background_light" />
+
+            <Button
+                android:id="@+id/popupChoferT"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignBaseline="@+id/telefonoChofer"
+                android:layout_alignBottom="@+id/telefonoChofer"
+                android:layout_marginStart="9dp"
+                android:layout_toEndOf="@+id/telefonoChofer"
+                android:background="@drawable/exclamation"
+                tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />
+            <Button
+                android:id="@+id/popupChoferC"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignBaseline="@+id/emailChofer"
+                android:layout_alignBottom="@+id/emailChofer"
+                android:layout_marginStart="9dp"
+                android:layout_toEndOf="@+id/emailChofer"
+                android:background="@drawable/exclamation"
+                tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
