--- a/Transportaciones_CICESE/app/src/main/res/layout-land/app_bar_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/app_bar_inicio_asistentes.xml
@@ -30,12 +30,12 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="900dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/imageView10"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
+                android:layout_width="600dp"
+                android:layout_height="30dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
@@ -44,12 +44,10 @@
 
             <TextView
                 android:id="@+id/textView23"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/imageView10"
+                android:layout_width="600dp"
+                android:layout_height="30dp"
+                android:layout_alignStart="@+id/imageView10"
                 android:layout_alignTop="@+id/imageView10"
-                android:layout_marginTop="11dp"
-                android:layout_toEndOf="@+id/imageView12"
                 android:text="@string/bienvenido"
                 android:textAlignment="center"
                 android:textColor="@color/ColorActionBarTitle"
@@ -58,11 +56,11 @@
 
             <ViewFlipper
                 android:id="@+id/flipper1"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="150dp"
-                android:layout_alignParentStart="true"
+                android:layout_alignStart="@+id/imageView10"
                 android:layout_below="@+id/imageView10"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="21dp"
                 android:autoStart="true"
                 android:flipInterval="3000"
                 android:inAnimation="@android:anim/slide_in_left"
@@ -100,125 +98,125 @@
             </ViewFlipper>
 
 
-            <TextView
-                android:id="@+id/textView9"
+            <!--DESDE AQUIIIIIIIIIII-->
+            <RelativeLayout
+                android:id="@+id/relativeLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/imageView10"
+                android:layout_alignTop="@+id/flipper1"
+                android:layout_toEndOf="@+id/flipper1"
+                android:layout_marginLeft="10dp">
 
-                android:layout_alignStart="@+id/imageView10"
-                android:layout_below="@+id/flipper1"
-                android:layout_marginTop="24dp"
-                android:text="@string/como_asistente"
-                android:textAlignment="center"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/como_asistente"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView13"
-                android:layout_below="@+id/textView9"
-                android:layout_marginTop="11dp"
-                android:drawableLeft="@drawable/forma_iconp"
-                android:drawablePadding="5dp"
-                android:text="@string/registar_usuarios_y_solicitudes"
-                tools:ignore="RtlHardcoded" />
 
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/imageView10"
-                android:layout_alignStart="@+id/textView9"
-                android:layout_below="@+id/textView2"
-                android:layout_marginTop="2dp"
-                android:drawableLeft="@drawable/forma_iconp"
-                android:drawablePadding="5dp"
-                android:text="@string/int_msj_d"
-                tools:ignore="HardcodedText,RtlHardcoded" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/textView13"
+                    android:layout_below="@+id/textView9"
+                    android:layout_marginTop="11dp"
+                    android:drawableLeft="@drawable/forma_iconp"
+                    android:drawablePadding="5dp"
+                    android:text="@string/registar_usuarios_y_solicitudes"
+                    tools:ignore="RtlHardcoded" />
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView13"
-                android:layout_alignStart="@+id/textView2"
-                android:layout_below="@+id/textView13"
-                android:layout_marginTop="2dp"
-                android:drawableLeft="@drawable/forma_iconp"
-                android:drawablePadding="5dp"
-                android:text="@string/update_service" />
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/textView9"
+                    android:layout_below="@+id/textView2"
+                    android:layout_marginTop="2dp"
+                    android:drawableLeft="@drawable/forma_iconp"
+                    android:drawablePadding="5dp"
+                    android:text="@string/int_msj_d"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
 
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView14"
-                android:layout_alignStart="@+id/textView14"
-                android:layout_below="@+id/textView14"
-                android:layout_marginTop="2dp"
-                android:drawableLeft="@drawable/forma_iconp"
-                android:drawablePadding="5dp"
-                android:text="@string/consultas_info" />
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/textView13"
+                    android:layout_alignStart="@+id/textView2"
+                    android:layout_below="@+id/textView13"
+                    android:layout_marginTop="2dp"
+                    android:drawableLeft="@drawable/forma_iconp"
+                    android:drawablePadding="5dp"
+                    android:text="@string/update_service" />
 
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/textView14"
+                    android:layout_alignStart="@+id/textView14"
+                    android:layout_below="@+id/textView14"
+                    android:layout_marginTop="2dp"
+                    android:drawableLeft="@drawable/forma_iconp"
+                    android:drawablePadding="5dp"
+                    android:text="@string/consultas_info" />
+            </RelativeLayout>
+            <!--DESDE AQUIIIIIIIIIII-->
             <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/textView2"
-                android:layout_toStartOf="@+id/textView2"
                 tools:ignore="ContentDescription,UnusedAttribute" />
 
 
             <Button
                 android:id="@+id/irAUpdate"
-                android:layout_width="300dp"
+                android:layout_width="195dp"
                 android:layout_height="90dp"
-                android:layout_alignStart="@+id/irAConsultas"
-                android:layout_below="@+id/irAConsultas"
-                android:text="Actualizar servicios"
-                android:textAllCaps="false"
-                android:textSize="15dp"
-                android:layout_marginTop="10dp"
-                android:textColor="#ffff"
+                android:layout_alignEnd="@+id/imageView10"
+                android:layout_alignTop="@+id/irAConsultas"
                 android:background="@drawable/fast_button_style"
                 android:drawableLeft="@drawable/update_icon_b"
-                android:paddingLeft="15dp"/>
+                android:paddingLeft="10dp"
+                android:text="Actualizar \nservicios"
+                android:textAllCaps="false"
+                android:textColor="#ffff"
+                android:textSize="15dp" />
 
             <Button
                 android:id="@+id/irAConsultas"
-                android:layout_width="300dp"
+                android:layout_width="195dp"
                 android:layout_height="90dp"
-                android:layout_below="@+id/irARegistros"
+                android:layout_alignTop="@+id/irARegistros"
                 android:layout_centerHorizontal="true"
-                android:text="Consultar servicios"
-                android:textAllCaps="false"
-                android:textSize="15dp"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/fast_button_style"
+                android:text="Consultar \nservicios"
+                android:textAllCaps="false"
                 android:textColor="#ffff"
+                android:textSize="15dp"
                 android:drawableLeft="@drawable/consults_icon_b"
-                android:paddingLeft="15dp"/>
-
+                android:paddingLeft="10dp"/>
 
 
             <Button
                 android:id="@+id/irARegistros"
-                android:layout_width="300dp"
+                android:layout_width="195dp"
                 android:layout_height="90dp"
+                android:layout_alignStart="@+id/flipper1"
+                android:layout_below="@+id/relativeLayout"
+                android:layout_marginTop="22dp"
                 android:background="@drawable/fast_button_style"
-                android:layout_below="@+id/textView15"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="43dp"
-                android:text="Registrar usuarios y solicitudes"
+                android:text="Registrar usuarios \ny solicitudes"
                 android:textAllCaps="false"
-                android:textSize="15dp"
                 android:textColor="#ffff"
+                android:textSize="15dp"
                 android:drawableLeft="@drawable/forma_icon_b"
-                android:paddingLeft="15dp">
+                android:paddingLeft="10dp">
 
             </Button>
 
