--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_menu_registros_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_menu_registros_asistente.xml
@@ -4,129 +4,134 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:layout_weight="1"
     android:background="@android:color/background_light"
     tools:context="com.transporte.cicese.transportaciones_cicese.MenuRegistrosAsistenteActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/imr1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView10"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="@android:color/background_light"
-        android:contentDescription=""
-        app:srcCompat="@drawable/chofer"
-        tools:ignore="ContentDescription,UnusedAttribute" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/llmr">
 
-    <ImageButton
-        android:id="@+id/imr2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/imr1"
-        android:layout_marginEnd="42dp"
-        android:backgroundTint="@android:color/background_light"
-        android:contentDescription=""
-        app:srcCompat="@drawable/pasajero"
-        tools:ignore="ContentDescription,UnusedAttribute" />
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="300dp"
+                    android:layout_height="70dp"
+                    android:layout_alignEnd="@+id/textView19"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="13dp"
+                    app:srcCompat="@drawable/textbacks"
+                    tools:ignore="ContentDescription" />
 
-    <ImageButton
-        android:id="@+id/imr3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/asistente"
-        tools:ignore="ContentDescription,UnusedAttribute"
-        android:layout_below="@+id/imr1"
-        android:layout_alignStart="@+id/imr1" />
-
-    <ImageButton
-        android:id="@+id/imr4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView21"
-        android:layout_alignStart="@+id/textView19"
-        android:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/solicitud"
-        tools:ignore="ContentDescription,UnusedAttribute" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/registrar_chofer"
-        android:textColor="@color/ColorActionBarTitle"
-        android:layout_below="@+id/imr1"
-        android:layout_alignEnd="@+id/textView20" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/imr2"
-        android:layout_below="@+id/imr2"
-        android:text="@string/registrar_pasajero"
-        android:textColor="@color/ColorActionBarTitle" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/registrar_asistente"
-        android:textColor="@color/ColorActionBarTitle"
-        android:layout_below="@+id/imr3"
-        android:layout_alignStart="@+id/imr3" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/registrar_solicitud"
-        android:textColor="@color/ColorActionBarTitle"
-        android:layout_alignBaseline="@+id/textView20"
-        android:layout_alignBottom="@+id/textView20"
-        android:layout_alignEnd="@+id/imr4" />
+                <TextView
+                    android:id="@+id/textViewRC"
+                    android:layout_width="270dp"
+                    android:layout_height="70dp"
+                    android:layout_alignTop="@+id/imageView10"
+                    android:layout_centerHorizontal="true"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="Seleccione una de las siguientes opciones para registrar usuarios o una solicitud"
+                    android:textAlignment="center"
+                    android:textColor="?attr/actionMenuTextColor"
+                    android:textSize="15sp"
+                    tools:ignore="MissingConstraints,RtlHardcoded"
+                    tools:layout_editor_absoluteX="134dp"
+                    tools:layout_editor_absoluteY="16dp" />
 
 
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        app:srcCompat="@drawable/textbacks"
-        tools:ignore="ContentDescription" />
+                <ImageButton
+                    android:id="@+id/imr1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_above="@+id/textView18"
+                    android:layout_alignStart="@+id/textViewRC"
+                    android:backgroundTint="@android:color/background_light"
+                    android:contentDescription="TODO"
+                    app:srcCompat="@drawable/chofer" />
+
+                <ImageButton
+                    android:id="@+id/imr2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignStart="@+id/textView19"
+                    android:layout_below="@+id/imageView10"
+                    android:layout_marginTop="12dp"
+                    android:backgroundTint="@android:color/background_light"
+                    android:contentDescription="TODO"
+                    app:srcCompat="@drawable/pasajero" />
+
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/textView26"
+                    android:layout_below="@+id/imr2"
+                    android:text="@string/registrar_pasajero"
+                    android:textColor="@color/ColorActionBarTitle" />
+
+                <ImageButton
+                    android:id="@+id/imr3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignStart="@+id/imr1"
+                    android:layout_alignTop="@+id/imr4"
+                    android:backgroundTint="@android:color/background_light"
+                    app:srcCompat="@drawable/asistente" />
+
+                <TextView
+                    android:id="@+id/textView20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/textView26"
+                    android:layout_below="@+id/imr3"
+                    android:text="@string/registrar_asistente"
+                    android:textColor="@color/ColorActionBarTitle" />
+
+                <ImageButton
+                    android:id="@+id/imr4"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignEnd="@+id/imr2"
+                    android:layout_below="@+id/textView19"
+                    android:layout_marginTop="67dp"
+                    android:backgroundTint="@android:color/background_light"
+                    app:srcCompat="@drawable/solicitud" />
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView20"
+                    android:layout_alignBottom="@+id/textView20"
+                    android:layout_alignEnd="@+id/imr4"
+                    android:text="@string/registrar_solicitud"
+                    android:textColor="@color/ColorActionBarTitle" />
+
+                <TextView
+                    android:id="@+id/textView26"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView20"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="42dp"
+                    android:text="@string/tip"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="17dp"
+                    android:layout_alignBottom="@+id/textView19"
+                    android:layout_alignStart="@+id/imr1"
+                    android:text="@string/registrar_chofer"
+                    android:textColor="@color/ColorActionBarTitle" />
 
 
-    <TextView
-        android:id="@+id/textViewRC"
-        android:layout_width="220dp"
-        android:layout_height="70dp"
-        android:layout_alignBottom="@+id/imageView10"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="Seleccione una de las siguientes opciones para registrar usuarios o una solicitud"
-        android:textAlignment="center"
-        android:textColor="?attr/actionMenuTextColor"
-        android:textSize="15sp"
-        tools:ignore="MissingConstraints,RtlHardcoded"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="16dp" />
+            </RelativeLayout>
+    </ScrollView>
 
-    <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/imr4"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView20"
-        android:layout_marginBottom="43dp"
-        android:text="@string/tip"
-        android:textAlignment="center" />
 </RelativeLayout>
