--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_servicios.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_servicios.xml
@@ -47,16 +47,15 @@
         android:layout_width="260dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
-
+        android:background="@drawable/border_style"
         android:layout_below="@+id/imageView10"
         android:layout_alignStart="@+id/imageView10"
         android:layout_marginTop="95dp"
-
         android:layout_alignEnd="@+id/imageView10"/>
 
   <ScrollView
         android:layout_width="340dp"
-        android:layout_height="match_parent"
+        android:layout_height="1000dp"
         android:layout_marginTop="15dp"
         android:layout_below="@+id/buscarServicios"
         android:layout_centerHorizontal="true"
