--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_choferes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_choferes.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,49 +16,207 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@android:color/black" />
+            app:titleTextColor="@android:color/black"
+            />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_inicio_choferes" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:id="@+id/scrollView4">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="900dp">
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="300dp"
+                android:layout_height="70dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="12dp"
+                app:srcCompat="@drawable/textback"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/imageView10"
+                android:layout_alignTop="@+id/imageView10"
+                android:layout_marginTop="11dp"
+                android:layout_toEndOf="@+id/imageView12"
+                android:text="@string/bienvenido"
+                android:textAlignment="center"
+                android:textColor="@color/ColorActionBarTitle"
+                android:textSize="20dp" />
 
 
-    <RelativeLayout
-        android:layout_width="407dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView15"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="487dp"
-        android:layout_marginTop="540dp">
+            <ViewFlipper
+                android:id="@+id/flipper1"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/imageView10"
+                android:layout_marginTop="22dp"
+                android:autoStart="true"
+                android:flipInterval="3000"
+                android:inAnimation="@android:anim/slide_in_left"
+                android:outAnimation="@android:anim/slide_out_right"
+                tools:ignore="UselessLeaf,UselessParent">
 
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="100dp"
-            android:layout_height="90dp"
-            android:layout_alignTop="@+id/button4"
-            android:layout_marginStart="16dp"
-            android:layout_toEndOf="@+id/button4"
-            android:text="Ver mis servicios" />
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/logocicese"
+                    tools:ignore="ContentDescription" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="100dp"
-            android:layout_height="90dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="87dp"
-            android:text="Enviar notificaciones rápidas" />
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/instalaciones"
+                    tools:ignore="ContentDescription" />
 
-    </RelativeLayout>
-    <!--android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/background_light"
-        app:srcCompat="@drawable/chat_icon" /-->
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ensenada"
+                    tools:ignore="ContentDescription" />
 
-</android.support.design.widget.CoordinatorLayout>
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/mapa"
+                    tools:ignore="ContentDescription" />
+
+            </ViewFlipper>
+
+
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/imageView10"
+                android:layout_alignStart="@+id/imageView10"
+                android:layout_below="@+id/flipper1"
+                android:layout_marginTop="24dp"
+                android:text="@string/como_chofer"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textView13"
+                android:drawableLeft="@drawable/forma_iconp"
+                android:drawablePadding="5dp"
+                android:layout_below="@+id/textView9"
+                android:layout_marginTop="11dp"
+                android:text="@string/dar_seguimiento_a_su_solicitud"
+                tools:ignore="RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/imageView10"
+                android:layout_alignStart="@+id/textView9"
+                android:drawableLeft="@drawable/forma_iconp"
+                android:drawablePadding="5dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="2dp"
+                android:text="@string/int_msj"
+                tools:ignore="HardcodedText,RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textView2"
+                android:layout_below="@+id/textView13"
+                android:drawableLeft="@drawable/forma_iconp"
+                android:drawablePadding="5dp"
+                android:layout_marginTop="2dp"
+                android:text="@string/q_noti"
+                tools:ignore="HardcodedText,RtlHardcoded"
+                android:layout_alignEnd="@+id/textView13" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textView14"
+                android:layout_below="@+id/textView14"
+                android:layout_marginTop="2dp"
+                android:drawableLeft="@drawable/forma_iconp"
+                android:drawablePadding="5dp"
+                android:text="@string/localizacion"
+                tools:ignore="HardcodedText,RtlHardcoded"
+                android:layout_alignEnd="@+id/textView14" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView2"
+                android:layout_toStartOf="@+id/textView2"
+                tools:ignore="ContentDescription,UnusedAttribute" />
+
+            <Button
+                android:id="@+id/irNotificaciones"
+                android:layout_width="300dp"
+                android:layout_height="90dp"
+                android:layout_below="@+id/irAMisServiciosC"
+                android:layout_centerHorizontal="true"
+                android:text="Enviar notificaciones rápidas"
+                android:textAllCaps="false"
+                android:textSize="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/fast_button_style"
+                android:textColor="#ffff"
+                android:drawableLeft="@drawable/noti_icon_b"
+                android:paddingLeft="15dp"/>
+
+            <Button
+                android:id="@+id/irAMisServiciosC"
+                android:layout_width="300dp"
+                android:layout_height="90dp"
+                android:background="@drawable/fast_button_style"
+                android:layout_below="@+id/textView15"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="43dp"
+                android:text="Ir a mis servicios"
+                android:textAllCaps="false"
+                android:textSize="15dp"
+                android:textColor="#ffff"
+                android:drawableLeft="@drawable/services_icon_b"
+                android:paddingLeft="15dp">
+
+            </Button>
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/irNotificaciones"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="91dp"
+                android:text="@string/mayor_info"
+                android:textSize="10sp" />
+
+        </RelativeLayout>
+    </ScrollView>
+
+
+</RelativeLayout>
