--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_servicios.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_servicios.xml
@@ -51,7 +51,7 @@
         android:layout_below="@+id/imageView10"
         android:layout_alignStart="@+id/imageView10"
         android:layout_marginTop="95dp"
-
+        android:saveEnabled="false"
         android:layout_alignEnd="@+id/imageView10"/>
 
   <ScrollView
@@ -109,6 +109,12 @@
                   android:padding="3dip"
                   android:text=""
                   tools:ignore="RtlHardcoded" />
+
+              <Button
+                  android:id="@+id/verRuta"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="ver ruta" />
           </TableRow>
 
 
@@ -245,6 +251,12 @@
                   android:padding="3dip"
                   android:text=""
                   tools:ignore="RtlHardcoded" />
+
+              <Button
+                  android:id="@+id/verEncuentro"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="Ver Encuentro" />
           </TableRow>
 
           <TableRow
@@ -370,6 +382,12 @@
                   android:padding="3dip"
                   android:text=""
                   tools:ignore="RtlHardcoded" />
+
+              <Button
+                  android:id="@+id/verDestino"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="Ver Destino" />
           </TableRow>
 
           <TableRow
@@ -533,4 +551,12 @@
           </TableRow>
       </TableLayout>
   </ScrollView>
+
+    <Spinner
+        android:id="@+id/solicitudesSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageView10"
+        android:visibility="invisible" />
 </RelativeLayout>
