--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_asistente.xml
@@ -116,7 +116,8 @@
                 android:layout_height="40dp"
                 android:layout_alignBaseline="@+id/usuario_generadoA"
                 android:layout_alignBottom="@+id/usuario_generadoA"
-                android:layout_alignEnd="@+id/textViewRC"
+                android:layout_marginStart="7dp"
+                android:layout_toEndOf="@+id/usuario_generadoA"
                 android:background="@drawable/border_style"
                 android:drawableLeft="@drawable/name_icon"
                 android:drawablePadding="5dp"
