--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_chat.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_chat.xml
@@ -11,6 +11,12 @@ android:paddingTop="@dimen/activity_vertical_margin"
 android:orientation="vertical"
 tools:context="com.transporte.cicese.transportaciones_cicese.chatActivity">
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/spinner_style">
+
+    </Spinner>
 <ScrollView
     android:layout_width="match_parent"
     android:layout_weight="20"
