--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
@@ -127,7 +127,7 @@
                 android:layout_height="1000dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="invisible">
 
                 <ImageView
                     android:id="@+id/image"
@@ -302,6 +302,7 @@
                     android:layout_below="@+id/marca_vehiculo"
                     android:layout_marginTop="10dp"
                     android:entries="@array/years_array"
+                    android:background="@drawable/spinner_style"
                     android:prompt="@string/year_prompt" />
 
                 <EditText
