--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_splash.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_splash.xml
@@ -41,7 +41,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="52dp"
         android:background="#ffff"
-        android:text="http://www.cicese.edu.mx/ \n   CICESE, México - ©2017"
+        android:textAlignment="center"
+        android:text="http://www.cicese.edu.mx/ \nCICESE, México - ©2017"
         android:textColor="#000000"
         tools:ignore="HardcodedText" />
 </RelativeLayout>
