--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_asistentes.xml
@@ -15,10 +15,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryText"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@android:color/black"
-            />
+            app:titleTextColor="@android:color/black" />
 
     </android.support.design.widget.AppBarLayout>
 
