--- a/Transportaciones_CICESE/app/src/main/res/values/styles.xml
+++ b/Transportaciones_CICESE/app/src/main/res/values/styles.xml
@@ -3,32 +3,29 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <!--item name="colorPrimary">@color/colorPrimary</item-->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="actionBarStyle">@style/ActionBarStyle</item>
         <!--item name="colorPrimaryDark">@color/colorPrimaryDark</item-->
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="drawerArrowStyle">@style/DrawerIcon</item>
-    </style>
-
-
-    <style name="ToolbarStyle" parent="@style/ThemeOverlay.AppCompat.ActionBar">
-        <!-- Customize color of navigation drawer icon and back arrow -->
         <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
+
     <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
-        <item name="titleTextStyle">@style/ActionBarTitleTextStyle</item>
-        <item name="background">@color/colorPrimary</item>
+        <item name="titleTextStyle">#ffffff</item>
+        <item name="background">@color/colorPrimaryText</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
     <style name="ActionBarTitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/ColorActionBarTitle</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -39,7 +36,8 @@
 
 
     <style name="DrawerIcon" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/colorAccent</item>
+        <item name="color">#ffffff</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
 </resources>
